Sun Mar  7 20:50:37 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/EndingsDB.cc(createDB): Use link and unlink to move,
	rather than a non-portable system call.

Mon Mar  8 01:36:38 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htlib/DB2_db.cc: Remove errno.
	* htlib/DB2_hash.cc: Ditto.

Sun Mar  7 09:39:37 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/timegm.c: Fix problems compiling on libc5 systems noted by
	Hans-Peter.

	* htlib/Makefile.in, Makefile.in, Makefile.config.in: Use regex.c
	instead of rx.

	* htfuzzy/EndingsDB.cc: Ditto.

	* configure.in, configure: Don't bother to config rx directory.
	
Fri Mar  5 08:09:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrig/parse_doc.pl: uses pdftotext to handle PDF files,
	generates a head record with punctuation intact, extra checks
	for file "wrappers" & check for MS Word signature (no longer
	defaults to catdoc), strip extra punct. from start & end of words,
	rehyphenate text from PDFs

Tue Mar  2 23:18:20 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc: Renamed main.cc for consistency with other programs.

	* htlib/DB2_hash.h, htlib/DB2_hash.cc: Added interface to Berkeley
	hash database format.

	* htlib/Makefile.in: Use them!
	
	* htlib/Database.h: Define database types, allowing a choice
	between different formats.

	* htlib/Database.cc(getDatabaseInstance): Use passed type to pick
	between subclasses. Currently only uses Hash and B-Tree formats of
	Berkeley DB.

	* htcommon/DocumentDB.cc, htfuzzy/Endings.cc,
	htfuzzy/EndingsDB.cc, htfuzzy/Fuzzy.cc, htfuzzy/Prefix.cc,
	htfuzzy/Substring.cc, htfuzzy/Synonym.cc, htfuzzy/htfuzzy.cc,
	htmerge/docs.cc, htmerge/words.cc, htsearch/Display.cc,
	htsearch/htsearch.cc: Use new form of getDatabaseInstance(),
	currently with DB_BTREE option (for compatibility).

Mon Mar  1 22:53:37 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/regex.c, htlib/striptime.c: Import new versions from
	glibc.
