@@ -16,16 +16,13 @@
 #include "Configuration.h"
 #include "HtURLCodec.h"
 
-#ifdef HAVE_LIBZ
-#ifdef HAVE_ZLIB_H
+#if defined(HAVE_LIBZ) && defined(HAVE_ZLIB_H)
 #include <zlib.h>
-#endif
 #endif
 
 extern Configuration config;
 
-#ifdef HAVE_LIBZ
-#ifdef HAVE_ZLIB_H
+#if defined(HAVE_LIBZ) && defined(HAVE_ZLIB_H)
 //unsigned char DocumentRef::c_buffer[32000];
 //
 // Compress Function
@@ -117,7 +114,6 @@ void DocumentRef::DocHead(char *h) {
   docHead=h;
   docHeadState=docHead.length()==0?Empty:Uncompressed;
 }
-#endif
 #else
  
 char *DocumentRef::DocHead() {
@@ -166,10 +162,8 @@ void DocumentRef::Clear()
     docAnchors.Destroy();
     docHopCount = -1;
     docBackLinks = 0;
-#ifdef HAVE_LIBZ
-#ifdef HAVE_ZLIB_H
+#if defined(HAVE_LIBZ) && defined(HAVE_ZLIB_H)
     docHeadState=Empty;
-#endif
 #endif
 }
 
@@ -212,13 +206,11 @@ void DocumentRef::Serialize(String &s)
     int		length;
     String	*str;
 
-#ifdef HAVE_LIBZ
-#ifdef HAVE_ZLIB_H
+#if defined(HAVE_LIBZ) && defined(HAVE_ZLIB_H)
     if (docHeadState==Uncompressed) {
       Compress(docHead);
       docHeadState=Compressed;
     }
-#endif
 #endif
 //
 // The following macros make the serialization process a little easier
@@ -503,10 +495,8 @@ void DocumentRef::Deserialize(String &stream)
 	    break;
         case DOC_HEAD:
             getstring(x, s, docHead);
-#ifdef HAVE_LIBZ
-#ifdef HAVE_ZLIB_H
+#if defined(HAVE_LIBZ) && defined(HAVE_ZLIB_H)
             docHeadState=docHead.length()==0?Empty:Compressed;
-#endif
 #endif
             break;
 	case DOC_METADSC:
